--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
     "python.formatting.autopep8Args": ["--max-line-length", "200", "--experimental", "--ignore", "W292"],
     "notebook.formatOnSave.enabled": true,
     "editor.codeActionsOnSave": {
-        "source.organizeImports": false
+        "source.organizeImports": "never"
     },
     "editor.fontSize": 13,
     "editor.renderWhitespace": "trailing",
